--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -28,7 +28,7 @@ html(lang='en')
     //if lte IE 8
       link(rel='stylesheet', href='http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css')
 
-  body(data-spy='scroll', data-target='.navbar-nav')
+  body(data-spy='scroll', data-target='.navbar')
     block body
 
   // JQuery and plugins
