--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -15,10 +15,14 @@ html(lang='en')
     link(rel='stylesheet', href='/static/css/bootstrap.min.css')
     //- link(rel='stylesheet', href='/css/font-awesome.min.css')
 
-    link(rel='stylesheet', href='/static/css/app.css')
-    link(rel='stylesheet', href='/static/css/forms.css')
-    link(rel='stylesheet', href='/static/css/MarkerCluster.css')
-    link(rel='stylesheet', href='/static/css/MarkerCluster.Default.css')
+    link(rel='stylesheet/less', type='text/css', media='all', href='/static/less/styles.less')
+    script(src='/static/js/lib/less-1.4.2.min.js')
+    //- if DEBUG
+    //- else
+      {% load compress %}
+      {% compress css %}
+      link(rel='stylesheet/less', type='text/css', media='all', href='/static/less/styles.less')
+      {% endcompress %}
     
     //if lt IE 9
       script(src='/static/js/lib/html5shiv.js')
