--- a/oabutton/apps/web/templates/web/layout.html
+++ b/oabutton/apps/web/templates/web/layout.html
@@ -101,8 +101,20 @@
             target:     '#divToUpdate',
             dataType:   'json',
             url:        '/api/signin/',
-            error:      function() {
-                $('#id_email').animateHighlight("#dd0000", 1000);
+            error:      function(ctx) {
+                var errors = JSON.parse(ctx.responseText).errors;
+
+                if ('email' in errors) {
+                    $('#id_email').animateHighlight("#dd0000", 1000);
+                }
+
+                if ('name' in errors) {
+                    $('#id_name').animateHighlight("#dd0000", 1000);
+                }
+
+                if ('confirm_public' in errors) {
+                    $('label.confirm-label').animateHighlight("#dd0000", 1000);
+                }
             },
             success:    function(responseJSON, statusText, xhr, formElem) { 
                 $('#bookmarklet-js').attr('href',
