extended the User model to fit the signin form updated testcases to verify the newly created user has all attributes saved back to disk dropped mongoauth testcases as the User model just extends the standard mongoauth user

--- a/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/apps/web/templates/web/index.html
@@ -82,6 +82,10 @@ change.
                     {{ signin_form.confirm_public}}
                 </div>
                 <div>
+                    {{ signin_form.mailinglist|label_with_classes:"mailinglist-label"}}
+                    {{ signin_form.mailinglist}}
+                </div>
+                <div>
                     <button class="btn btn-large btn-primary clear" type="submit">Generate Custom Bookmarklet</button>
                 </div>
             </form>
