Jade index homepage

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -65,16 +65,15 @@ block body
                         p
                             div.form-group
                                 {{ signin_form.privacy}}
-                            button.btn.btn-lg.btn-primary.btn-block(type='submit', onclick="javascript:document.getElementById('bookmarklet').style.display='block';return false") 
+                            button.btn.btn-lg.btn-primary.btn-block(type='submit') 
                                 | Get my personal Open Access button
                 .row
                     .col-md-8.col-md-offset-2
-                        #bookmarklet
+                        #bookmarklet(style='display:none')
                             p
                                 | Drag this to your bookmark bar:
                             a.btn.btn-lg.btn-primary(id='bookmarklet-js', href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','{{ hostname }}/static/js/bookmarklet.js');")
                                 i.icon-bookmark Open Access Button
-
     .container.map
         a(name='map')
         #map
