switched back to jade template removed onclick for the submit button as we use jquery.form

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -65,7 +65,7 @@ block body
                         p
                             div.form-group
                                 {{ signin_form.privacy}}
-                            button.btn.btn-lg.btn-primary.btn-block(type='submit', onclick="javascript:document.getElementById('bookmarklet').style.display='block';return false") 
+                            button.btn.btn-lg.btn-primary.btn-block(type='submit')
                                 | Get my personal Open Access button
                 .row
                     .col-md-8.col-md-offset-2
