--- a/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
@@ -53,5 +53,6 @@
     </div>
    </div>
 {% endblock %}{% block scripts %}
-<script src="/static/js/jquery.min.js"></script>
-<script src="/static/js/add.js"></script>{% endblock %}
+<script src="/static/js/lib/jquery.min.js"></script>
+<script src="/static/js/add.js"></script>
+{% endblock %}
