--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -8,7 +8,6 @@
     <title>{{'Open Access Button'|force_escape}}</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/app.css">
   </head>
@@ -16,7 +15,7 @@
     <!-- Main body-->
     <div class="container">{% block content %}{% endblock %}
     </div>
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.js"></script>{% block scripts %}{% endblock %}
+    <script src="/static/js/lib/jquery.min.js"></script>
+    <script src="/static/js/lib/bootstrap.js"></script>{% block scripts %}{% endblock %}
   </body>
 </html>
