--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -74,4 +74,27 @@ header {
 
 #bookmarklet {
   display: none;
+  position: fixed;
+  top: 15px;
+  right: 100px;
+  z-index: 9999;
+  background: white;
+  padding: 10px;
+  margin: 0;
+  border-radius: 10px;
+}
+
+#bookmarklet .wedge-up {
+  display: block;
+  width: 15px;
+  height: 15px;
+  border-top: 15px solid transparent;
+  border-left: 15px solid white;
+  position: absolute;
+  margin-top: -25px;
+}
+
+.modal-backdrop.in {
+  opacity: .8;
+  filter: alpha(opacity=80);
 }
