--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -78,9 +78,10 @@ header {
   top: 15px;
   right: 100px;
   z-index: 9999;
-  background: white;
   padding: 10px;
   margin: 0;
+  background: white;
+  border: 1px solid #ddd;
   border-radius: 10px;
 }
 
