Renamed to Start

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -39,7 +39,7 @@ block body
     .start
         a(name='start')
         .container.center
-            block signin
+            block start
     
     .map
         a(name='map')
