--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -43,7 +43,7 @@ block signin
                 .modal-header
                     button.close(type="button", data-dismiss="modal", aria-hidden="true") &times;
                     h4.modal-title(id="bookmarklet-header") 
-                        | Thanks for registering
+                        | Thanks for signing up!
                 .modal-body
                     Instructions for enabling the browser bar, cute little animation, etc.
                 .modal-footer
