Moved team out into JSON

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -91,48 +91,14 @@ block body
         a(name='team')
         .container
             h2 Meet the team.
-                // Team profiles
-                    ul.thumbnails
-                        li.span2
-                            a(href="http://twitter.com/Mcarthur_Joe")
-                                .thumbnail
-                                    img(src='/img/joe.jpg')
-                                    .caption
-                                        h3 Joe
-                                        p @Mcarthur_Joe
-                        li.span2
-                            a(href="http://twitter.com/davidecarroll")
-                                .thumbnail
-                                    img(src='/img/david.jpg')
-                                    .caption
-                                        h3 David
-                                        p @davidecarroll
-                        li.span2
-                            a(href="http://twitter.com/nicholascwng")
-                                .thumbnail
-                                    img(src='https://secure.gravatar.com/avatar/9637895e310caf25237e89155157b2a7?s=200')
-                                    .caption
-                                        h3 Nick
-                                        p @nicholascwng
-                        li.span2
-                            a(href="http://twitter.com/andylolz")
-                                .thumbnail
-                                    img(src='https://secure.gravatar.com/avatar/bbb9eb1af3b427f8259df33f6e8844aa?s=200')
-                                    .caption
-                                        h3 Andy
-                                        p @andylolz
-                        li.span2
-                            a(href="http://twitter.com/frathgeber")
-                                .thumbnail
-                                    img(src='https://secure.gravatar.com/avatar/d178a6201be696c466c41c355c671707?s=200')
-                                    .caption
-                                        h3 Florian
-                                        p @frathgeber
-                        li.span2
+                ul.thumbnails
+                    li.span2
+                        a
                             .thumbnail
-                                img(src='/img/elliot.jpg')
-                                .caption
-                                    h3 Elliot
+                                img
+                            .caption
+                                h3
+                                p
 
     #footer
         a(name='contact')
