changed logo PNG file and updated base bookmarklet layout template to use new logo

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -14,6 +14,7 @@
   <body style="margin-top: 20px" {% block body_attrs %}{% endblock %}>
     <!-- Main body-->
     <div class="container">
+            <img src="/static/img/oabutton_logo.png" style="position: absolute; top: 0; right: 0;"/><a id="id_pmc" title="Available at PMC" target="_new" style="position: absolute; top: 0; right: 32px; display: none;"><img src="/static/img/pmc.png"/></a>
         {% block content %}
         {% endblock %}
     </div>
