changed copy on success.html page as per #119

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
@@ -1,6 +1,9 @@
 {% extends "bookmarklet/layout.html" %}{% block content %}
 <h2>Thanks!</h2>
-<p>Now to find an Open Access version…</p>
+<p>Below are a number of ways to get access to your paper, unfortunately
+they won't always work but it's worth a shot.
+</p>
+<!-- Email link goes here -->
 <ul id="oa_links">
 </ul>
 <div>
