fix minor typo (DOI == Digital Object Identifier)

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
@@ -28,7 +28,7 @@
     {{ bookmarklet.doi.errors }}
     <div class="controls">
         {{ bookmarklet.doi }}
-        <p class="help-text">Document Object Identifier (DOI)</p>
+        <p class="help-text">Digital Object Identifier (DOI)</p>
     </div>
   </div>
   <div class="control-group">
