--- a/oabutton/apps/web/templates/web/sidebar/index.jade
+++ b/oabutton/apps/web/templates/web/sidebar/index.jade
@@ -41,7 +41,7 @@ block content
           input#id_doi.input-block-level(readonly='readonly', type='text', name='doi', value='#{vars.doi}')
         else
           input#id_doi.input-block-level(type='text', name='doi', placeholder='e.g. 10.1136/bmj.c7086')
-        p.help-text Document Object Identifier (DOI)
+        p.help-text Digital Object Identifier (DOI)
 
     .control-group
       label.control-label(for='id_description') Description
